--- a/admin/index.html
+++ b/admin/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="refresh" content="0;url=dist/index.html">
     <title>SB Admin</title>
     <script language="javascript">
-        window.location.href = "dist/index.html"
+        window.location.href = "dist/index.php"
     </script>
 </head>
 
 <body>
-    Go to <a href="dist/index.html">/dist/index.html</a>
+    Go to <a href="dist/index.php">/dist/index.html</a>
 </body>
 
 </html>
